// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/BorderWidth Borders 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderWidth": "0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-width-none
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderWidth": "1px",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-width-thin
      </span>
      <span
        className="label"
      >
        1px
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderWidth": "2px",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-width-thick
      </span>
      <span
        className="label"
      >
        2px
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/BorderWidth Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderWidth": "0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-width-none
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
</div>
`;
